# Quake-III-Arena-R

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make.bat  makefile
code/: CMakeLists.txt
code/botlib/: CMakeLists.txt  be_aas_reach.c  be_aas_route.c  be_ai_move.c  l_precomp.c  l_script.c
code/cgame/: CMakeLists.txt  cg_draw.c  cg_effects.c  cg_ents.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_players.c  cg_syscalls.c  cg_view.c  cg_weapons.c  tr_types.h
code/client/: cl_cgame.c  cl_cin.c  cl_main.c  cl_scrn.c  cl_ui.c  snd_adpcm.c  snd_dma.c
code/game/: CMakeLists.txt  ai_cmd.c  ai_dmnet.c  ai_dmq3.c  ai_main.c  ai_team.c  ai_vcmd.c  bg_lib.c  g_cmds.c  g_main.c  g_syscalls.c  q_math.c  q_shared.c  q_shared.h
code/macos/: CGMouseDeltaFix.h  CMakeLists.txt  Q3Controller.h  macosx_display.h  macosx_display.m  macosx_glimp.h  macosx_glimp.m  macosx_glsmp_ports.m  macosx_input.m  macosx_local.h  macosx_sndcore.m  macosx_sys.m  macosx_vkimp.m  macosx_wimp.m  plist.in
code/macos/Quake3.nib/: designable.nib  keyedobjects.nib
code/macosx/: CMakeLists.txt  macosx_glimp.m  macosx_input.m  macosx_local.h  macosx_sndcore.m
code/q3_ui/: CMakeLists.txt  ui_main.c  ui_players.c  ui_qmenu.c  ui_video.c
code/qcommon/: common.c  files.c  md4.c  qcommon.h  qfiles.h  unzip.c  vm.c  vm_interpreted.c  vm_local.h
code/renderer/: CMakeLists.txt  qgl.h  qvk.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cluster.c  tr_cmds.c  tr_flares.c  tr_glbackend.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_material.c  tr_mesh.c  tr_model.c  tr_public.h  tr_raytracing.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vkbackend.c  tr_world.c
code/renderer/vulkan/: vk_accelerationStructure.c  vk_attribute.c  vk_buffer.c  vk_cpipeline.c  vk_descriptor.c  vk_framebuffer.c  vk_helper.c  vk_image.c  vk_load.c  vk_pipeline.c  vk_rtpipeline.c  vk_rtx.c  vk_setup.c  vk_shader.c  vk_swapchain.c
code/renderer/vulkan/shader/: test.frag  test.vert  test_frag.spv  test_tex.frag  test_tex.vert  test_tex_frag.spv  test_tex_vert.spv  test_vert.spv
code/server/: sv_game.c
code/splines/: CMakeLists.txt  math_matrix.h  math_quaternion.h  math_vector.cpp  q_shared.cpp  q_shared.h  splines.cpp
code/tools/: CMakeLists.txt
code/tools/q3asm/: CMakeLists.txt
code/ui/: CMakeLists.txt  ui_main.c  ui_syscalls.c
code/unix/: CMakeLists.txt  unix_main.c  unix_net.c  unix_shared.c
code/win32/: CMakeLists.txt  glw_win.h  win_gamma.c  win_glimp.c  win_input.c  win_local.h  win_main.c  win_qgl.c  win_qvk.c  win_shared.c  win_snd.c  win_syscon.c  win_vkimp.c  win_wimp.c  win_wndproc.c  winquake.rc
shader/: compile.bat  compile.sh  shader.code-workspace
shader/glsl/: RTBlend.glsl  RTHelper.glsl  RayPayload.glsl  anyhit.rahit  clearAttachment.vert  closesthit.rchit  constants.h  direct_illumination.rgen  fullscreenRect.vert  gbuffer.glsl  globalTexture.glsl  miss.rmiss  multiTexture.vert  multiTextureAdd.frag  multiTextureMul.frag  primary_rays.rgen  raygen.rgen  reflect_rays.rgen  rng.comp  rt_Helper.glsl  rt_anyhit.rahit  rt_closesthit.rchit  rt_defines.glsl  rt_miss.rmiss  rt_raygen.rgen  rt_shadow.rahit  rt_shadow.rmiss  rt_sky.glsl  rt_texture.glsl  rt_vattributes.glsl  singleTexture.frag  singleTexture.vert  singleTextureClip.vert  test_tex_clip.vert  texture.frag  texture.vert  textureClip.vert  traceRay.glsl  vertexData.glsl
shader/glsl/compute/: asvgf.glsl  asvgf_atrous.comp  asvgf_atrous_lf.comp  asvgf_forward.comp  asvgf_grad.comp  asvgf_grad_atrous.comp  asvgf_rng.comp  asvgf_taa.comp  asvgf_taa_code.glsl  asvgf_temporal.comp  compositing.comp  maxmipmap.comp  rng.comp  tonemapping.comp
shader/glsl/rasterizer/: clearAttachment.frag  fullscreenRect.frag  texture.frag
shader/glsl/raytracer/: defines.glsl  direct_illumination.rgen  gbuffer.glsl  globalTexture.glsl  indirect_illumination.rgen  lights.glsl  primary_rays.rgen  random.glsl  reflect_rays.rahit  reflect_rays.rchit  reflect_rays.rgen  reflect_rays.rmiss  rt_Helper.glsl  rt_anyhit.rahit  rt_closesthit.rchit  rt_miss.rmiss  rt_raygen.rgen  rt_shadow.rahit  rt_shadow.rchit  rt_shadow.rmiss  sky.glsl  traceRay.glsl  vertexData.glsl
shader/header/: anyhit.rahit.h  asvgf_atrous.comp.h  asvgf_atrous_lf.comp.h  asvgf_forward.comp.h  asvgf_grad.comp.h  asvgf_grad_atrous.comp.h  asvgf_rng.comp.h  asvgf_taa.comp.h  asvgf_temporal.comp.h  clearAttachment.frag.h  clearAttachment.vert.h  closesthit.rchit.h  compositing.comp.h  composition.comp.h  direct_illumination.rgen.h  fullscreenRect.frag.h  fullscreenRect.vert.h  indirect_illumination.rgen.h  maxmipmap.comp.h  miss.rmiss.h  multiTexture.vert.h  multiTextureAdd.frag.h  multiTextureClip.vert.h  multiTextureMul.frag.h  primary_rays.rgen.h  raygen.rgen.h  reflect_rays.rahit.h  reflect_rays.rchit.h  reflect_rays.rgen.h  reflect_rays.rmiss.h  rng.comp.h  rt_anyhit.rahit.h  rt_closesthit.rchit.h  rt_miss.rmiss.h  rt_raygen.rgen.h  rt_shadow.rahit.h  rt_shadow.rchit.h  rt_shadow.rmiss.h  singleTexture.frag.h  singleTexture.vert.h  (+8 more)
shader/spv/: anyhit.rahit.spv  asvgf_atrous.comp.spv  asvgf_atrous_lf.comp.spv  asvgf_forward.comp.spv  asvgf_grad.comp.spv  asvgf_grad_atrous.comp.spv  asvgf_rng.comp.spv  asvgf_taa.comp.spv  asvgf_temporal.comp.spv  clearAttachment.frag.spv  clearAttachment.vert.spv  closesthit.rchit.spv  compositing.comp.spv  composition.comp.spv  direct_illumination.rgen.spv  fullscreenRect.frag.spv  fullscreenRect.vert.spv  indirect_illumination.rgen.spv  maxmipmap.comp.spv  miss.rmiss.spv  multiTexture.vert.spv  multiTextureAdd.frag.spv  multiTextureClip.vert.spv  multiTextureMul.frag.spv  primary_ray.rgen.spv  primary_rays.rgen.spv  raygen.rgen.spv  reflect_rays.rahit.spv  reflect_rays.rchit.spv  reflect_rays.rgen.spv  reflect_rays.rmiss.spv  rng.comp.spv  rt_anyhit.rahit.spv  rt_closesthit.rchit.spv  rt_miss.rmiss.spv  rt_raygen.rgen.spv  rt_shadow.rahit.spv  rt_shadow.rchit.spv  rt_shadow.rmiss.spv  singleTexture.frag.spv  (+5 more)
vm/win32/: 7z_create_pak9.bat  cgame.bat  cgame.q3asm  clean.bat  q3_ui.bat  q3_ui.q3asm
